# rust-std-training

.devcontainer/: devcontainer.json
.github/workflows/: book.yml
common/lib/rgb-led/src/: lib.rs
intro-embdedded-rust/intro-esp32/: Cargo.toml
intro-embdedded-rust/intro-esp32/scripts/: build.sh  find_rls_fmt.sh  flash.sh  run-wokwi.sh
intro/http-client/src/: main.rs
intro/http-led/: Cargo.toml
intro/http-led/src/: main.rs
intro/http-server-led/: Cargo.toml
intro/http-server-led/src/: main.rs
intro/http-server/src/: main.rs
